@@ -1,3 +1,8 @@
+2007-06-14  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keybinding-properties.c: (setup_dialog): fix GConf
+	notification
+
 2007-05-02  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keybinding-properties.c: (main): add g_thread_init as
